--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,26 @@
+/* page styling*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/*Body style start */
+
 body {
     background-color: #d9dcd6;
 }
 
-    /* header */
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+ /* Body style end */
+ /* Header style start */
 
 .header {
     padding: 20px;
@@ -43,16 +55,9 @@ body {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
+/* Header style end*/
 
-p {
-    font-size: 16px;
-}
-
- /* hero style start */
+ /* Hero style start */
 
 .hero {
     height: 800px;
@@ -63,7 +68,9 @@ p {
     background-position: center;
 }
 
- /* hero style end */
+ /* Hero style end */
+
+/* Contents style start*/
 
 .float-left {
     float: left;
@@ -81,6 +88,31 @@ p {
     margin-left: 20px;
 }
 
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img  {
+    max-height: 200px;
+}
+
+
+
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* Contents style end*/
+
+/* Benefits style start*/
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -92,93 +124,25 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
- /*how we do it sections */
-
-
-.search-engine-optimization, .online-reputation-management, .social-media-marketing{
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/*Benefits style end*/
+/* Footer style start */
 
 .footer {
     padding: 30px;
@@ -190,3 +154,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/* Foot style end */
